POWR-824 views and block configuration

--- a/web/sites/default/config/views.view.city_charter_sections.yml
+++ b/web/sites/default/config/views.view.city_charter_sections.yml
@@ -1,15 +1,18 @@
-uuid: bf37efe2-0c12-4c00-8b01-dfd1856f2d20
+uuid: ce1bc1b6-2cc9-4315-b7e9-066f49e5ce51
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.node.field_charter_chapter
-    - node.type.charter_article
+    - field.storage.node.field_prefix_note
+    - field.storage.node.field_section_body
+    - field.storage.node.field_suffix_note
+    - node.type.charter_section
   module:
     - node
+    - text
     - user
-id: city_charter_articles
-label: 'City Charter articles'
+id: city_charter_sections
+label: 'City Charter sections'
 module: views
 description: ''
 tag: ''
@@ -142,7 +145,7 @@ display:
           admin_label: ''
           operator: in
           value:
-            charter_article: charter_article
+            charter_section: charter_section
           group: 1
           exposed: false
           expose:
@@ -187,16 +190,11 @@ display:
           expose:
             label: ''
           plugin_id: standard
-      title: 'City Charter'
+      title: 'Charter sections'
       header: {  }
       footer: {  }
       empty: {  }
-      relationships:
-        field_charter_chapter:
-          id: field_charter_chapter
-          table: node__field_charter_chapter
-          field: field_charter_chapter
-          plugin_id: standard
+      relationships: {  }
       arguments: {  }
       display_extenders: {  }
     cache_metadata:
@@ -215,10 +213,10 @@ display:
     display_options:
       display_extenders: {  }
       arguments:
-        field_charter_chapter_target_id:
-          id: field_charter_chapter_target_id
-          table: node__field_charter_chapter
-          field: field_charter_chapter_target_id
+        field_charter_article_target_id:
+          id: field_charter_article_target_id
+          table: node__field_charter_article
+          field: field_charter_article_target_id
           relationship: none
           group_type: group
           admin_label: ''
@@ -252,34 +250,76 @@ display:
       defaults:
         arguments: false
         relationships: false
+        fields: false
       relationships: {  }
-    cache_metadata:
-      max-age: -1
-      contexts:
-        - 'languages:language_content'
-        - 'languages:language_interface'
-        - url
-        - 'user.node_grants:view'
-        - user.permissions
-      tags: {  }
-  entity_reference_1:
-    display_plugin: entity_reference
-    id: entity_reference_1
-    display_title: 'Entity Reference'
-    position: 2
-    display_options:
-      display_extenders: {  }
-      style:
-        type: entity_reference
-        options:
-          search_fields:
-            field_charter_chapter: field_charter_chapter
-            title: title
       fields:
-        field_charter_chapter:
-          id: field_charter_chapter
-          table: node__field_charter_chapter
-          field: field_charter_chapter
+        title:
+          id: title
+          table: node_field_data
+          field: title
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: h2
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: string
+          settings:
+            link_to_entity: true
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          plugin_id: field
+        field_prefix_note:
+          id: field_prefix_note
+          table: node__field_prefix_note
+          field: field_prefix_note
           relationship: none
           group_type: group
           admin_label: ''
@@ -324,11 +364,10 @@ display:
           hide_empty: false
           empty_zero: false
           hide_alter_empty: true
-          click_sort_column: target_id
-          type: entity_reference_label
-          settings:
-            link: false
-          group_column: target_id
+          click_sort_column: value
+          type: text_default
+          settings: {  }
+          group_column: value
           group_columns: {  }
           group_rows: true
           delta_limit: 0
@@ -339,6 +378,156 @@ display:
           separator: ', '
           field_api_classes: false
           plugin_id: field
+        field_section_body:
+          id: field_section_body
+          table: node__field_section_body
+          field: field_section_body
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: text_default
+          settings: {  }
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          plugin_id: field
+        field_suffix_note:
+          id: field_suffix_note
+          table: node__field_suffix_note
+          field: field_suffix_note
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: text_default
+          settings: {  }
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          plugin_id: field
+    cache_metadata:
+      max-age: -1
+      contexts:
+        - 'languages:language_content'
+        - 'languages:language_interface'
+        - url
+        - 'user.node_grants:view'
+        - user.permissions
+      tags:
+        - 'config:field.storage.node.field_prefix_note'
+        - 'config:field.storage.node.field_section_body'
+        - 'config:field.storage.node.field_suffix_note'
+        - extensions
+  entity_reference_1:
+    display_plugin: entity_reference
+    id: entity_reference_1
+    display_title: 'Entity Reference'
+    position: 2
+    display_options:
+      display_extenders: {  }
+      style:
+        type: entity_reference
+        options:
+          search_fields:
+            title: title
+      fields:
         title:
           id: title
           table: node_field_data
@@ -420,6 +609,4 @@ display:
         - 'languages:language_interface'
         - 'user.node_grants:view'
         - user.permissions
-      tags:
-        - 'config:field.storage.node.field_charter_chapter'
-        - extensions
+      tags: {  }
