POWR-824 fix the issue with the page variant that was hanging on

--- a/web/sites/default/config/views.view.city_charter_articles.yml
+++ b/web/sites/default/config/views.view.city_charter_articles.yml
@@ -62,9 +62,6 @@ display:
           id: title
           table: node_field_data
           field: title
-          settings:
-            link_to_entity: true
-          plugin_id: field
           relationship: none
           group_type: group
           admin_label: ''
@@ -97,11 +94,11 @@ display:
             trim: false
             preserve_tags: ''
             html: false
-          element_type: ''
+          element_type: h2
           element_class: ''
           element_label_type: ''
           element_label_class: ''
-          element_label_colon: true
+          element_label_colon: false
           element_wrapper_type: ''
           element_wrapper_class: ''
           element_default_classes: true
@@ -111,6 +108,8 @@ display:
           hide_alter_empty: true
           click_sort_column: value
           type: string
+          settings:
+            link_to_entity: true
           group_column: value
           group_columns: {  }
           group_rows: true
@@ -121,6 +120,7 @@ display:
           multi_type: separator
           separator: ', '
           field_api_classes: false
+          plugin_id: field
       filters:
         status:
           value: '1'
@@ -191,12 +191,7 @@ display:
       header: {  }
       footer: {  }
       empty: {  }
-      relationships:
-        field_charter_chapter:
-          id: field_charter_chapter
-          table: node__field_charter_chapter
-          field: field_charter_chapter
-          plugin_id: standard
+      relationships: {  }
       arguments: {  }
       display_extenders: {  }
     cache_metadata:
