POWR-824 add workflow and permissions

--- a/web/sites/default/config/user.role.code_editor.yml
+++ b/web/sites/default/config/user.role.code_editor.yml
@@ -12,4 +12,28 @@ label: 'Code editor'
 weight: 4
 is_admin: null
 permissions:
+  - 'create charter_article content'
+  - 'create charter_chapter content'
+  - 'create charter_section content'
+  - 'delete any charter_article content'
+  - 'delete any charter_chapter content'
+  - 'delete any charter_section content'
+  - 'delete charter_article revisions'
+  - 'delete charter_chapter revisions'
+  - 'delete charter_section revisions'
+  - 'delete own charter_article content'
+  - 'delete own charter_chapter content'
+  - 'delete own charter_section content'
+  - 'edit any charter_article content'
+  - 'edit any charter_chapter content'
+  - 'edit any charter_section content'
+  - 'edit own charter_article content'
+  - 'edit own charter_chapter content'
+  - 'edit own charter_section content'
+  - 'revert charter_article revisions'
+  - 'revert charter_chapter revisions'
+  - 'revert charter_section revisions'
   - 'use text format full_html'
+  - 'view charter_article revisions'
+  - 'view charter_chapter revisions'
+  - 'view charter_section revisions'
