--- a/web/sites/default/config/workflows.workflow.editorial.yml
+++ b/web/sites/default/config/workflows.workflow.editorial.yml
@@ -5,6 +5,9 @@ dependencies:
   config:
     - node.type.alert
     - node.type.building
+    - node.type.charter_article
+    - node.type.charter_chapter
+    - node.type.charter_section
     - node.type.city_service
     - node.type.event
     - node.type.guide
@@ -87,6 +90,9 @@ type_settings:
     node:
       - alert
       - building
+      - charter_article
+      - charter_chapter
+      - charter_section
       - city_service
       - event
       - guide
