POWR-909 address config conflict after merge to master:

--- a/web/sites/default/config/core.entity_view_display.node.development_permit.related.yml
+++ b/web/sites/default/config/core.entity_view_display.node.development_permit.related.yml
@@ -71,5 +71,9 @@ hidden:
   field_permit_type: true
   field_phone: true
   field_phone_help: true
+  field_popular: true
+  field_related_content: true
+  field_reviewer: true
   field_service_location: true
+  field_topics: true
   links: true
