POWR-825 City Code content model

--- a/web/sites/default/config/core.entity_view_display.node.charter_article.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.charter_article.default.yml
@@ -32,16 +32,11 @@ content:
     third_party_settings: {  }
     type: text_default
     region: content
-  field_suffix_note:
-    weight: 1
-    label: hidden
-    settings: {  }
-    third_party_settings: {  }
-    type: text_default
-    region: content
 hidden:
+  content_moderation_control: true
   field_charter_chapter: true
   field_legacy_path: true
   field_numeric_order: true
   field_reviewer: true
+  field_suffix_note: true
   links: true
