--- a/web/sites/default/config/core.entity_view_display.node.charter_section.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.charter_section.teaser.yml
@@ -35,6 +35,7 @@ content:
     settings: {  }
     third_party_settings: {  }
 hidden:
+  content_moderation_control: true
   field_charter_article: true
   field_legacy_path: true
   field_numeric_order: true
