--- a/web/sites/default/config/core.entity_view_display.node.code_section.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.code_section.teaser.yml
@@ -1,16 +1,17 @@
-uuid: e12277b8-1938-44e8-9e7b-5fdaa82b08a0
+uuid: f24ac359-0ef1-449f-9f69-9357ad17e07e
 langcode: en
 status: true
 dependencies:
   config:
     - core.entity_view_mode.node.teaser
-    - field.field.node.charter_article.field_charter_chapter
-    - field.field.node.charter_article.field_legacy_path
-    - field.field.node.charter_article.field_numeric_order
-    - field.field.node.charter_article.field_prefix_note
-    - field.field.node.charter_article.field_reviewer
-    - field.field.node.charter_article.field_suffix_note
-    - node.type.charter_article
+    - field.field.node.code_section.field_code_chapter
+    - field.field.node.code_section.field_legacy_path
+    - field.field.node.code_section.field_numeric_order
+    - field.field.node.code_section.field_prefix_note
+    - field.field.node.code_section.field_reviewer
+    - field.field.node.code_section.field_section_body
+    - field.field.node.code_section.field_suffix_note
+    - node.type.code_section
   module:
     - panelizer
     - text
@@ -21,9 +22,9 @@ third_party_settings:
     custom: false
     allow: false
     default: default
-id: node.charter_article.teaser
+id: node.code_section.teaser
 targetEntityType: node
-bundle: charter_article
+bundle: code_section
 mode: teaser
 content:
   field_prefix_note:
@@ -35,9 +36,10 @@ content:
     third_party_settings: {  }
 hidden:
   content_moderation_control: true
-  field_charter_chapter: true
+  field_code_chapter: true
   field_legacy_path: true
   field_numeric_order: true
   field_reviewer: true
+  field_section_body: true
   field_suffix_note: true
   links: true
