--- a/web/sites/default/config/user.role.authenticated.yml
+++ b/web/sites/default/config/user.role.authenticated.yml
@@ -25,12 +25,20 @@ permissions:
   - 'access video_browser entity browser pages'
   - 'break content lock'
   - 'create media'
+  - 'revert charter_article revisions'
+  - 'revert charter_chapter revisions'
+  - 'revert charter_section revisions'
   - 'revert city_service revisions'
+  - 'revert code_chapter revisions'
+  - 'revert code_section revisions'
+  - 'revert code_title revisions'
+  - 'revert development_permit revisions'
   - 'revert event revisions'
   - 'revert guide revisions'
   - 'revert information revisions'
   - 'revert news revisions'
   - 'revert notification revisions'
+  - 'revert page revisions'
   - 'schedule editorial transition archive'
   - 'schedule editorial transition archived_draft'
   - 'schedule editorial transition archived_published'
