--- a/web/sites/default/config/core.entity_view_display.node.charter_chapter.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.charter_chapter.teaser.yml
@@ -33,6 +33,7 @@ content:
     settings: {  }
     third_party_settings: {  }
 hidden:
+  content_moderation_control: true
   field_legacy_path: true
   field_numeric_order: true
   field_reviewer: true
