--- a/web/sites/default/config/core.entity_view_display.node.code_chapter.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.code_chapter.default.yml
@@ -1,14 +1,14 @@
-uuid: 90ab882e-c8fe-4b5f-be9e-51d4c6572e01
+uuid: 2f375e9c-aa5f-4a60-8b50-53fc4aacafde
 langcode: en
 status: true
 dependencies:
   config:
-    - field.field.node.charter_chapter.field_legacy_path
-    - field.field.node.charter_chapter.field_numeric_order
-    - field.field.node.charter_chapter.field_prefix_note
-    - field.field.node.charter_chapter.field_reviewer
-    - field.field.node.charter_chapter.field_suffix_note
-    - node.type.charter_chapter
+    - field.field.node.code_chapter.field_code_title
+    - field.field.node.code_chapter.field_legacy_path
+    - field.field.node.code_chapter.field_numeric_order
+    - field.field.node.code_chapter.field_prefix_note
+    - field.field.node.code_chapter.field_reviewer
+    - node.type.code_chapter
   module:
     - panelizer
     - text
@@ -19,9 +19,9 @@ third_party_settings:
     custom: false
     allow: false
     default: default
-id: node.charter_chapter.default
+id: node.code_chapter.default
 targetEntityType: node
-bundle: charter_chapter
+bundle: code_chapter
 mode: default
 content:
   field_prefix_note:
@@ -33,8 +33,8 @@ content:
     region: content
 hidden:
   content_moderation_control: true
+  field_code_title: true
   field_legacy_path: true
   field_numeric_order: true
   field_reviewer: true
-  field_suffix_note: true
   links: true
