--- a/web/sites/default/config/core.entity_view_display.node.code_section.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.code_section.default.yml
@@ -1,16 +1,16 @@
-uuid: f8cd0ed1-8591-4aef-8276-4baf4de95887
+uuid: 14bd76d4-5e4d-4fe3-bfb0-32a64091afae
 langcode: en
 status: true
 dependencies:
   config:
-    - field.field.node.charter_section.field_charter_article
-    - field.field.node.charter_section.field_legacy_path
-    - field.field.node.charter_section.field_numeric_order
-    - field.field.node.charter_section.field_prefix_note
-    - field.field.node.charter_section.field_reviewer
-    - field.field.node.charter_section.field_section_body
-    - field.field.node.charter_section.field_suffix_note
-    - node.type.charter_section
+    - field.field.node.code_section.field_code_chapter
+    - field.field.node.code_section.field_legacy_path
+    - field.field.node.code_section.field_numeric_order
+    - field.field.node.code_section.field_prefix_note
+    - field.field.node.code_section.field_reviewer
+    - field.field.node.code_section.field_section_body
+    - field.field.node.code_section.field_suffix_note
+    - node.type.code_section
   module:
     - panelizer
     - text
@@ -21,9 +21,9 @@ third_party_settings:
     custom: false
     allow: false
     default: default
-id: node.charter_section.default
+id: node.code_section.default
 targetEntityType: node
-bundle: charter_section
+bundle: code_section
 mode: default
 content:
   field_prefix_note:
@@ -41,15 +41,15 @@ content:
     type: text_default
     region: content
   field_suffix_note:
+    type: text_default
     weight: 2
+    region: content
     label: hidden
     settings: {  }
     third_party_settings: {  }
-    type: text_default
-    region: content
 hidden:
   content_moderation_control: true
-  field_charter_article: true
+  field_code_chapter: true
   field_legacy_path: true
   field_numeric_order: true
   field_reviewer: true
