--- a/web/sites/default/config/core.entity_view_display.node.code_title.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.code_title.default.yml
@@ -1,14 +1,13 @@
-uuid: 90ab882e-c8fe-4b5f-be9e-51d4c6572e01
+uuid: 986fca4f-9f1d-4a95-8cf0-2c24277eda79
 langcode: en
 status: true
 dependencies:
   config:
-    - field.field.node.charter_chapter.field_legacy_path
-    - field.field.node.charter_chapter.field_numeric_order
-    - field.field.node.charter_chapter.field_prefix_note
-    - field.field.node.charter_chapter.field_reviewer
-    - field.field.node.charter_chapter.field_suffix_note
-    - node.type.charter_chapter
+    - field.field.node.code_title.field_legacy_path
+    - field.field.node.code_title.field_numeric_order
+    - field.field.node.code_title.field_prefix_note
+    - field.field.node.code_title.field_reviewer
+    - node.type.code_title
   module:
     - panelizer
     - text
@@ -19,9 +18,9 @@ third_party_settings:
     custom: false
     allow: false
     default: default
-id: node.charter_chapter.default
+id: node.code_title.default
 targetEntityType: node
-bundle: charter_chapter
+bundle: code_title
 mode: default
 content:
   field_prefix_note:
@@ -36,5 +35,4 @@ hidden:
   field_legacy_path: true
   field_numeric_order: true
   field_reviewer: true
-  field_suffix_note: true
   links: true
