--- a/web/sites/default/config/core.entity_view_display.node.code_title.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.code_title.teaser.yml
@@ -1,16 +1,14 @@
-uuid: e12277b8-1938-44e8-9e7b-5fdaa82b08a0
+uuid: 3bf3f5c7-5f85-4ef6-8578-1fc66edb6a36
 langcode: en
 status: true
 dependencies:
   config:
     - core.entity_view_mode.node.teaser
-    - field.field.node.charter_article.field_charter_chapter
-    - field.field.node.charter_article.field_legacy_path
-    - field.field.node.charter_article.field_numeric_order
-    - field.field.node.charter_article.field_prefix_note
-    - field.field.node.charter_article.field_reviewer
-    - field.field.node.charter_article.field_suffix_note
-    - node.type.charter_article
+    - field.field.node.code_title.field_legacy_path
+    - field.field.node.code_title.field_numeric_order
+    - field.field.node.code_title.field_prefix_note
+    - field.field.node.code_title.field_reviewer
+    - node.type.code_title
   module:
     - panelizer
     - text
@@ -21,23 +19,21 @@ third_party_settings:
     custom: false
     allow: false
     default: default
-id: node.charter_article.teaser
+id: node.code_title.teaser
 targetEntityType: node
-bundle: charter_article
+bundle: code_title
 mode: teaser
 content:
   field_prefix_note:
     type: text_default
     weight: 0
     region: content
-    label: hidden
+    label: above
     settings: {  }
     third_party_settings: {  }
 hidden:
   content_moderation_control: true
-  field_charter_chapter: true
   field_legacy_path: true
   field_numeric_order: true
   field_reviewer: true
-  field_suffix_note: true
   links: true
