--- a/web/sites/default/config/user.role.code_editor.yml
+++ b/web/sites/default/config/user.role.code_editor.yml
@@ -15,25 +15,46 @@ permissions:
   - 'create charter_article content'
   - 'create charter_chapter content'
   - 'create charter_section content'
+  - 'create code_chapter content'
+  - 'create code_section content'
+  - 'create code_title content'
   - 'delete any charter_article content'
   - 'delete any charter_chapter content'
   - 'delete any charter_section content'
+  - 'delete any code_chapter content'
+  - 'delete any code_section content'
+  - 'delete any code_title content'
   - 'delete charter_article revisions'
   - 'delete charter_chapter revisions'
   - 'delete charter_section revisions'
   - 'delete own charter_article content'
   - 'delete own charter_chapter content'
   - 'delete own charter_section content'
+  - 'delete own code_chapter content'
+  - 'delete own code_section content'
+  - 'delete own code_title content'
   - 'edit any charter_article content'
   - 'edit any charter_chapter content'
   - 'edit any charter_section content'
+  - 'edit any code_chapter content'
+  - 'edit any code_section content'
+  - 'edit any code_title content'
   - 'edit own charter_article content'
   - 'edit own charter_chapter content'
   - 'edit own charter_section content'
+  - 'edit own code_chapter content'
+  - 'edit own code_section content'
+  - 'edit own code_title content'
   - 'revert charter_article revisions'
   - 'revert charter_chapter revisions'
   - 'revert charter_section revisions'
+  - 'revert code_chapter revisions'
+  - 'revert code_section revisions'
+  - 'revert code_title revisions'
   - 'use text format full_html'
   - 'view charter_article revisions'
   - 'view charter_chapter revisions'
   - 'view charter_section revisions'
+  - 'view code_chapter revisions'
+  - 'view code_section revisions'
+  - 'view code_title revisions'
