--- a/web/sites/default/config/workflows.workflow.editorial.yml
+++ b/web/sites/default/config/workflows.workflow.editorial.yml
@@ -9,6 +9,9 @@ dependencies:
     - node.type.charter_chapter
     - node.type.charter_section
     - node.type.city_service
+    - node.type.code_chapter
+    - node.type.code_section
+    - node.type.code_title
     - node.type.development_permit
     - node.type.event
     - node.type.news
@@ -93,6 +96,9 @@ type_settings:
       - charter_chapter
       - charter_section
       - city_service
+      - code_chapter
+      - code_section
+      - code_title
       - development_permit
       - event
       - news
