POWR-825 update views to display all and place blocks

--- a/web/sites/default/config/views.view.city_charter.yml
+++ b/web/sites/default/config/views.view.city_charter.yml
@@ -247,6 +247,10 @@ display:
           plugin_id: field
       defaults:
         fields: false
+      pager:
+        type: none
+        options:
+          offset: 0
     cache_metadata:
       max-age: -1
       contexts:
