--- a/web/sites/default/config/views.view.city_charter_articles.yml
+++ b/web/sites/default/config/views.view.city_charter_articles.yml
@@ -408,6 +408,10 @@ display:
             title: title
           separator: ' - '
           hide_empty: false
+      pager:
+        type: none
+        options:
+          offset: 0
     cache_metadata:
       max-age: -1
       contexts:
