--- a/web/sites/default/config/views.view.city_code.yml
+++ b/web/sites/default/config/views.view.city_code.yml
@@ -279,6 +279,10 @@ display:
           plugin_id: field
       defaults:
         fields: false
+      pager:
+        type: none
+        options:
+          offset: 0
     cache_metadata:
       max-age: -1
       contexts:
