--- a/web/sites/default/config/views.view.city_code_chapters.yml
+++ b/web/sites/default/config/views.view.city_code_chapters.yml
@@ -409,9 +409,8 @@ display:
           separator: ' - '
           hide_empty: false
       pager:
-        type: some
+        type: none
         options:
-          items_per_page: 0
           offset: 0
     cache_metadata:
       max-age: -1
