POWR-825 add admin charter/code view

--- a/web/sites/default/config/block.block.views_block__city_charter_articles_block_1.yml
+++ b/web/sites/default/config/block.block.views_block__city_charter_articles_block_1.yml
@@ -6,6 +6,7 @@ dependencies:
     - views.view.city_charter_articles
   module:
     - node
+    - system
     - views
   theme:
     - cloudy
@@ -31,3 +32,8 @@ visibility:
     negate: false
     context_mapping:
       node: '@node.node_route_context:node'
+  request_path:
+    id: request_path
+    pages: "/node/*/edit\r\n/node/*/delete"
+    negate: true
+    context_mapping: {  }
