POWR-825 updates to content types to include descriptions

--- a/web/sites/default/config/node.type.charter_article.yml
+++ b/web/sites/default/config/node.type.charter_article.yml
@@ -8,9 +8,9 @@ third_party_settings:
   menu_ui:
     available_menus: {  }
     parent: ''
-name: 'Charter article'
+name: 'Charter Article'
 type: charter_article
-description: ''
+description: 'Charter Articles are broken into sections. Articles are part of a Charter Chapter.'
 help: ''
 new_revision: true
 preview_mode: 1
