--- a/web/sites/default/config/node.type.charter_chapter.yml
+++ b/web/sites/default/config/node.type.charter_chapter.yml
@@ -8,9 +8,9 @@ third_party_settings:
   menu_ui:
     available_menus: {  }
     parent: ''
-name: 'Charter chapter'
+name: 'Charter Chapter'
 type: charter_chapter
-description: ''
+description: 'The City of Portland Charter is broken into chapters that contain articles divided into sections.'
 help: ''
 new_revision: true
 preview_mode: 1
