--- a/web/sites/default/config/node.type.charter_section.yml
+++ b/web/sites/default/config/node.type.charter_section.yml
@@ -8,9 +8,9 @@ third_party_settings:
   menu_ui:
     available_menus: {  }
     parent: ''
-name: 'Charter section'
+name: 'Charter Section'
 type: charter_section
-description: ''
+description: 'Charter Articles are divided into Charter Sections.'
 help: ''
 new_revision: true
 preview_mode: 1
