--- a/web/sites/default/config/node.type.code_section.yml
+++ b/web/sites/default/config/node.type.code_section.yml
@@ -8,9 +8,9 @@ third_party_settings:
   menu_ui:
     available_menus: {  }
     parent: ''
-name: 'Code section'
+name: 'Code Section'
 type: code_section
-description: ''
+description: 'Code Sections belong to Code Chapters which are part of Code Titles in the Code of the City of Portland, Oregon.'
 help: ''
 new_revision: true
 preview_mode: 1
