--- a/web/sites/default/config/node.type.code_title.yml
+++ b/web/sites/default/config/node.type.code_title.yml
@@ -8,9 +8,9 @@ third_party_settings:
   menu_ui:
     available_menus: {  }
     parent: ''
-name: 'Code title'
+name: 'Code Title'
 type: code_title
-description: ''
+description: 'The Code of the City of Portland, Oregon is divided into Code Titles.'
 help: ''
 new_revision: true
 preview_mode: 1
