--- a/web/sites/default/config/node.type.code_chapter.yml
+++ b/web/sites/default/config/node.type.code_chapter.yml
@@ -8,9 +8,9 @@ third_party_settings:
   menu_ui:
     available_menus: {  }
     parent: ''
-name: 'Code chapter'
+name: 'Code Chapter'
 type: code_chapter
-description: ''
+description: 'Code Chapters belong to Code Titles and contain Code Sections.'
 help: ''
 new_revision: true
 preview_mode: 1
