POWR-865  fixing config import

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -203,11 +203,11 @@ run_tests: &run_tests
           sleep 20 # wait 20 seconds for file sync to finish
 
           if [[ $CIRCLE_BRANCH = "master" ]]; then
-            terminus remote:drush portlandor.dev -- cim -y
+            terminus remote:drush portlandor.dev -- csim config_dev -y
             terminus remote:drush portlandor.dev -- cr
             terminus remote:drush portlandor.dev -- -y updb
           else
-            terminus remote:drush portlandor.$CIRCLE_BRANCH -- cim -y
+            terminus remote:drush portlandor.$CIRCLE_BRANCH -- csim config_multidev -y
             terminus remote:drush portlandor.$CIRCLE_BRANCH -- cr
             terminus remote:drush portlandor.$CIRCLE_BRANCH -- -y updb
           fi
