POWR-904 added custom portland submodule to display views exposed filters default relative dates as absolute dates

--- a/web/sites/default/config/lightning_core.versions.yml
+++ b/web/sites/default/config/lightning_core.versions.yml
@@ -187,3 +187,4 @@ content_lock_timeout: 1.0.0-alpha8
 focal_point: 1.0.0-beta6
 draggableviews: 1.2.0
 bootstrap_datepicker: 1.0.0-beta2
+portland_views_helper: 0.1.0
