--- a/web/sites/default/config/core.extension.yml
+++ b/web/sites/default/config/core.extension.yml
@@ -124,6 +124,7 @@ module:
   portland_legacy_redirects: 0
   portland_media_embed_helper: 0
   portland_revision_helper: 0
+  portland_views_helper: 0
   quickedit: 0
   rabbit_hole: 0
   rdf: 0
