POWR-969 Clear cache before config import

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -202,11 +202,14 @@ run_tests: &run_tests
 
           sleep 20 # wait 20 seconds for file sync to finish
 
+          # Must clear cache to ensure config import from the right environment
           if [[ $CIRCLE_BRANCH = "master" ]]; then
+            terminus remote:drush portlandor.dev -- cr
             terminus remote:drush portlandor.dev -- cim -y
             terminus remote:drush portlandor.dev -- cr
             terminus remote:drush portlandor.dev -- -y updb
           else
+            terminus remote:drush portlandor.$CIRCLE_BRANCH -- cr
             terminus remote:drush portlandor.$CIRCLE_BRANCH -- cim -y
             terminus remote:drush portlandor.$CIRCLE_BRANCH -- cr
             terminus remote:drush portlandor.$CIRCLE_BRANCH -- -y updb
