POWR-969 Update Terminus version

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -178,7 +178,7 @@ run_tests: &run_tests
         name: Install Terminus
         command: |
           # if [ ! -f "/tmp/vendor/pantheon-systems/terminus/bin/terminus" ]; then
-          cd /tmp && composer require pantheon-systems/terminus:2.0.0
+          cd /tmp && composer require pantheon-systems/terminus:^2.0.0
           # fi
     - save_cache:
         name: Save Terminus cache
