POWR-969 Update Terminus version in another line

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,7 +52,7 @@ build_and_deploy: &build_and_deploy
         name: Install Terminus
         command: |
           # if [ ! -f "/tmp/vendor/pantheon-systems/terminus/bin/terminus" ]; then
-          cd /tmp && composer require pantheon-systems/terminus:2.0.0
+          cd /tmp && composer require pantheon-systems/terminus:^2.0.0
           # fi
     - save_cache:
         name: Save Terminus cache
