--- a/web/sites/default/config/user.role.sitewide_editor.yml
+++ b/web/sites/default/config/user.role.sitewide_editor.yml
@@ -19,10 +19,12 @@ permissions:
   - 'break content lock'
   - 'create alert content'
   - 'create field_popular'
+  - 'create field_shortname_or_acronym'
   - 'edit any alert content'
   - 'edit any audio_file media'
   - 'edit any building content'
   - 'edit any city_service content'
+  - 'edit any development_permit content'
   - 'edit any document media'
   - 'edit any event content'
   - 'edit any guide content'
@@ -30,10 +32,27 @@ permissions:
   - 'edit any information content'
   - 'edit any news content'
   - 'edit any notification content'
+  - 'edit any page content'
   - 'edit any service_location content'
+  - 'edit any top_search content'
   - 'edit any video media'
+  - 'edit field_menu_link'
   - 'edit field_popular'
+  - 'edit field_shortname_or_acronym'
+  - 'edit own alert content'
+  - 'edit own building content'
+  - 'edit own city_service content'
+  - 'edit own development_permit content'
+  - 'edit own event content'
+  - 'edit own field_menu_link'
   - 'edit own field_popular'
+  - 'edit own guide content'
+  - 'edit own information content'
+  - 'edit own news content'
+  - 'edit own notification content'
+  - 'edit own page content'
+  - 'edit own service_location content'
+  - 'edit own top_search content'
   - 'edit terms in audience'
   - 'edit terms in community_actions'
   - 'edit terms in topics'
@@ -41,12 +60,15 @@ permissions:
   - 'revert all revisions'
   - 'revert building revisions'
   - 'revert city_service revisions'
+  - 'revert development_permit revisions'
   - 'revert event revisions'
   - 'revert guide revisions'
   - 'revert information revisions'
   - 'revert news revisions'
   - 'revert notification revisions'
+  - 'revert page revisions'
   - 'revert service_location revisions'
+  - 'revert top_search revisions'
   - 'schedule editorial transition archive'
   - 'schedule editorial transition archived_draft'
   - 'schedule editorial transition archived_published'
@@ -60,11 +82,14 @@ permissions:
   - 'view any unpublished content'
   - 'view building revisions'
   - 'view city_service revisions'
+  - 'view development_permit revisions'
   - 'view event revisions'
+  - 'view field_menu_link'
   - 'view field_popular'
   - 'view guide revisions'
   - 'view information revisions'
   - 'view news revisions'
   - 'view notification revisions'
+  - 'view own field_menu_link'
   - 'view own field_popular'
   - 'view service_location revisions'
