--- a/web/sites/default/config/lightning_core.versions.yml
+++ b/web/sites/default/config/lightning_core.versions.yml
@@ -188,3 +188,4 @@ focal_point: 1.0.0-beta6
 draggableviews: 1.2.0
 bootstrap_datepicker: 1.0.0-beta2
 portland_views_helper: 0.1.0
+bootstrap_datepicker_exposed_filter: 1.x
