POWR-904 adjusted exposed filter settings

--- a/web/sites/default/config/views.view.group_events.yml
+++ b/web/sites/default/config/views.view.group_events.yml
@@ -668,7 +668,7 @@ display:
             min: today
             max: '+30 days'
             value: today
-            type: offset
+            type: date
           group: 2
           exposed: true
           expose:
