POWR-966 removing dependencies for guides and information content types

--- a/web/sites/default/config/core.entity_view_display.node.page.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.page.teaser.yml
@@ -46,8 +46,10 @@ hidden:
   content_moderation_control: true
   field_audience: true
   field_body_content: true
+  field_featured_media: true
   field_group: true
   field_legacy_path: true
+  field_popular: true
   field_related_content: true
   field_reviewer: true
   field_topics: true
