--- a/web/sites/default/config/core.entity_view_display.group.bureau_office.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.group.bureau_office.teaser.yml
@@ -32,6 +32,11 @@ content:
     settings:
       link_to_entity: false
     third_party_settings: {  }
+  group_site_menu_entity_view_1:
+    weight: 10
+    settings: {  }
+    third_party_settings: {  }
+    region: content
   label:
     label: hidden
     type: string
@@ -75,8 +80,18 @@ hidden:
   field_audience: true
   field_building: true
   field_email: true
+  field_enable_documents_menu_item: true
+  field_enable_events_menu_item: true
+  field_enable_guides_and_informat: true
+  field_enable_news_and_notices_me: true
+  field_enable_offices_and_program: true
+  field_enable_programs_menu_item: true
+  field_enable_projects_menu_item: true
+  field_enable_services_and_inform: true
+  field_featured_media: true
   field_legacy_path: true
   field_logo: true
+  field_menu_link: true
   field_official_organization_name: true
   field_parent_group: true
   field_phone: true
