--- a/web/sites/default/config/core.entity_view_display.group.elected_official.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.group.elected_official.teaser.yml
@@ -27,6 +27,11 @@ content:
     third_party_settings: {  }
     type: string
     region: content
+  group_site_menu_entity_view_1:
+    weight: 10
+    settings: {  }
+    third_party_settings: {  }
+    region: content
   label:
     label: hidden
     type: string
@@ -42,7 +47,14 @@ hidden:
   field_building: true
   field_bureaus: true
   field_email: true
+  field_enable_events_menu_item: true
+  field_enable_guides_and_informat: true
+  field_enable_news_and_notices_me: true
+  field_enable_offices_and_program: true
+  field_enable_projects_menu_item: true
+  field_legacy_path: true
   field_logo: true
+  field_menu_link: true
   field_official_title: true
   field_phone: true
   field_shortname_or_acronym: true
