--- a/web/sites/default/config/core.entity_view_display.group.project.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.group.project.teaser.yml
@@ -55,6 +55,11 @@ content:
             fi-def-at: false
     type: string
     region: content
+  group_site_menu_entity_view_1:
+    weight: 10
+    settings: {  }
+    third_party_settings: {  }
+    region: content
   label:
     label: hidden
     type: string
@@ -75,6 +80,12 @@ hidden:
   created: true
   field_audience: true
   field_date_time_range: true
+  field_enable_documents_menu_item: true
+  field_enable_events_menu_item: true
+  field_enable_guides_and_informat: true
+  field_enable_news_and_notices_me: true
+  field_enable_projects_menu_item: true
+  field_featured_media: true
   field_legacy_path: true
   field_parent_group: true
   field_shortname_or_acronym: true
