--- a/web/sites/default/config/views.view.guidebook_entity_reference.yml
+++ b/web/sites/default/config/views.view.guidebook_entity_reference.yml
@@ -2,8 +2,7 @@ uuid: d959c7de-ec5f-499b-8532-194fc1cf29f6
 langcode: en
 status: true
 dependencies:
-  config:
-    - node.type.guide
+  config: null
   module:
     - group
     - node
@@ -291,10 +290,8 @@ display:
           admin_label: 'Content group content'
           required: true
           group_content_plugins:
-            'group_node:guide': 'group_node:guide'
             'group_node:building': '0'
             'group_node:city_service': '0'
-            'group_node:information': '0'
             'group_node:service_location': '0'
           entity_type: node
           plugin_id: group_content_to_entity_reverse
