--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -204,12 +204,16 @@ run_tests: &run_tests
 
           if [[ $CIRCLE_BRANCH = "master" ]]; then
             terminus remote:drush portlandor.dev -- cr
-            terminus remote:drush portlandor.dev -- cim -y
             terminus remote:drush portlandor.dev -- -y updb
+            terminus remote:drush portlandor.dev -- cim -y
+            terminus remote:drush portlandor.dev -- core:cron -y
+            terminus remote:drush portlandor.dev -- cr
           else            
             terminus remote:drush portlandor.$CIRCLE_BRANCH -- cr
-            terminus remote:drush portlandor.$CIRCLE_BRANCH -- cim -y
             terminus remote:drush portlandor.$CIRCLE_BRANCH -- -y updb
+            terminus remote:drush portlandor.$CIRCLE_BRANCH -- cim -y
+            terminus remote:drush portlandor.dev -- core:cron -y
+            terminus remote:drush portlandor.dev -- cr
           fi
     - run:
         name: Run tests against Pantheon
