POWR-1012 fix order of operations in quicksilver script and lando tools

--- a/.lando.yml
+++ b/.lando.yml
@@ -79,6 +79,8 @@ tooling:
       - appserver: drush updb -y
       - appserver: echo "Importing Drupal config..."
       - appserver: drush cim -y
+      - appserver: echo "Running cron..."
+      - appserver: drush core:cron -y
       - appserver: echo "Clearing cache..."
       - appserver: drush cr -y
       - appserver: echo "Building theme asset files..."
