POWR-904 remove past events link in group events view

--- a/web/sites/default/config/views.view.group_events.yml
+++ b/web/sites/default/config/views.view.group_events.yml
@@ -928,20 +928,7 @@ display:
           entity_field: gid
           plugin_id: group_id
       title: Events
-      footer:
-        area:
-          id: area
-          table: views
-          field: area
-          relationship: none
-          group_type: group
-          admin_label: ''
-          empty: true
-          tokenize: true
-          content:
-            value: '<div class="my-3"><a href="/group/{{ raw_arguments.gid }}/events/archive" class="btn btn-primary>View past events</a></div>'
-            format: simple_editor
-          plugin_id: text
+      footer: {  }
     cache_metadata:
       max-age: -1
       contexts:
