POWR-825 content type changes, small css add

--- a/web/sites/default/config/core.entity_view_display.node.code_chapter.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.code_chapter.default.yml
@@ -4,12 +4,14 @@ status: true
 dependencies:
   config:
     - field.field.node.code_chapter.field_code_title
+    - field.field.node.code_chapter.field_documents
     - field.field.node.code_chapter.field_legacy_path
     - field.field.node.code_chapter.field_numeric_order
     - field.field.node.code_chapter.field_prefix_note
     - field.field.node.code_chapter.field_reviewer
     - node.type.code_chapter
   module:
+    - ds
     - panelizer
     - text
     - user
@@ -24,6 +26,23 @@ targetEntityType: node
 bundle: code_chapter
 mode: default
 content:
+  field_documents:
+    type: entity_reference_entity_view
+    weight: 1
+    label: above
+    settings:
+      view_mode: embedded
+      link: false
+    third_party_settings:
+      ds:
+        ds_limit: ''
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
+    region: content
   field_prefix_note:
     weight: 0
     label: hidden
