--- a/web/sites/default/config/core.entity_view_display.node.code_section.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.code_section.default.yml
@@ -4,12 +4,12 @@ status: true
 dependencies:
   config:
     - field.field.node.code_section.field_code_chapter
+    - field.field.node.code_section.field_documents
     - field.field.node.code_section.field_legacy_path
     - field.field.node.code_section.field_numeric_order
     - field.field.node.code_section.field_prefix_note
     - field.field.node.code_section.field_reviewer
     - field.field.node.code_section.field_section_body
-    - field.field.node.code_section.field_suffix_note
     - node.type.code_section
   module:
     - panelizer
@@ -26,6 +26,14 @@ targetEntityType: node
 bundle: code_section
 mode: default
 content:
+  field_documents:
+    weight: 2
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
   field_prefix_note:
     weight: 0
     label: hidden
@@ -40,13 +48,6 @@ content:
     third_party_settings: {  }
     type: text_default
     region: content
-  field_suffix_note:
-    type: text_default
-    weight: 2
-    region: content
-    label: hidden
-    settings: {  }
-    third_party_settings: {  }
 hidden:
   content_moderation_control: true
   field_code_chapter: true
