--- a/web/sites/default/config/views.view.admin_charter_code_policies.yml
+++ b/web/sites/default/config/views.view.admin_charter_code_policies.yml
@@ -843,7 +843,7 @@ display:
           admin_label: ''
           empty: true
           tokenize: false
-          content: "<a href=\"/node/add\" class=\"button btn btn-primary-cta\">Add content</a>\r\n<p class=\"muted\">Use this to add charter, code, or policy content.</p>"
+          content: "<a href=\"/node/add\" class=\"button btn-cta\">Add content</a>\r\n<p class=\"muted\">Use this to add charter, code, or policy content.</p>"
           plugin_id: text_custom
       footer: {  }
       empty: {  }
@@ -872,7 +872,7 @@ display:
     position: 1
     display_options:
       display_extenders: {  }
-      path: admin/code
+      path: code/admin
       menu:
         type: normal
         title: 'Manage charter, code, policies'
