--- a/web/sites/default/config/views.view.city_charter.yml
+++ b/web/sites/default/config/views.view.city_charter.yml
@@ -247,10 +247,26 @@ display:
           plugin_id: field
       defaults:
         fields: false
+        filters: false
+        filter_groups: false
       pager:
         type: none
         options:
           offset: 0
+      filters:
+        type:
+          id: type
+          table: node_field_data
+          field: type
+          value:
+            charter_chapter: charter_chapter
+          entity_type: node
+          entity_field: type
+          plugin_id: bundle
+      filter_groups:
+        operator: AND
+        groups:
+          1: AND
     cache_metadata:
       max-age: -1
       contexts:
