--- a/web/sites/default/config/views.view.city_code_chapters.yml
+++ b/web/sites/default/config/views.view.city_code_chapters.yml
@@ -399,6 +399,8 @@ display:
           plugin_id: field
       defaults:
         fields: false
+        filters: false
+        filter_groups: false
       row:
         type: entity_reference
         options:
@@ -412,6 +414,52 @@ display:
         type: none
         options:
           offset: 0
+      filters:
+        type:
+          id: type
+          table: node_field_data
+          field: type
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: in
+          value:
+            code_chapter: code_chapter
+          group: 1
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+            reduce: false
+            argument: null
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          entity_type: node
+          entity_field: type
+          plugin_id: bundle
+      filter_groups:
+        operator: AND
+        groups:
+          1: AND
     cache_metadata:
       max-age: -1
       contexts:
