--- a/web/sites/default/config/core.entity_form_display.node.code_chapter.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.code_chapter.default.yml
@@ -3,7 +3,9 @@ langcode: en
 status: true
 dependencies:
   config:
+    - entity_browser.browser.document_browser_embed
     - field.field.node.code_chapter.field_code_title
+    - field.field.node.code_chapter.field_documents
     - field.field.node.code_chapter.field_legacy_path
     - field.field.node.code_chapter.field_numeric_order
     - field.field.node.code_chapter.field_prefix_note
@@ -12,6 +14,7 @@ dependencies:
   module:
     - chosen_field
     - content_moderation
+    - entity_browser
     - path
     - text
 id: node.code_chapter.default
@@ -21,7 +24,7 @@ mode: default
 content:
   created:
     type: datetime_timestamp
-    weight: 8
+    weight: 9
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -31,8 +34,23 @@ content:
     third_party_settings: {  }
     type: chosen_select
     region: content
-  field_legacy_path:
+  field_documents:
+    type: entity_browser_entity_reference
     weight: 4
+    settings:
+      entity_browser: document_browser_embed
+      field_widget_display: rendered_entity
+      field_widget_edit: true
+      field_widget_remove: true
+      field_widget_replace: true
+      open: true
+      selection_mode: selection_append
+      field_widget_display_settings:
+        view_mode: embedded
+    region: content
+    third_party_settings: {  }
+  field_legacy_path:
+    weight: 5
     settings:
       size: 60
       placeholder: ''
@@ -55,7 +73,7 @@ content:
     type: text_textarea
     region: content
   field_reviewer:
-    weight: 5
+    weight: 6
     settings:
       match_operator: CONTAINS
       size: 60
@@ -65,13 +83,13 @@ content:
     region: content
   moderation_state:
     type: moderation_state_default
-    weight: 6
+    weight: 7
     settings: {  }
     region: content
     third_party_settings: {  }
   path:
     type: path
-    weight: 9
+    weight: 10
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -85,7 +103,7 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 7
+    weight: 8
     settings:
       match_operator: CONTAINS
       size: 60
@@ -93,7 +111,7 @@ content:
     region: content
     third_party_settings: {  }
   url_redirects:
-    weight: 10
+    weight: 11
     region: content
     settings: {  }
     third_party_settings: {  }
