--- a/web/sites/default/config/core.entity_form_display.node.code_section.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.code_section.default.yml
@@ -3,17 +3,19 @@ langcode: en
 status: true
 dependencies:
   config:
+    - entity_browser.browser.document_browser_embed
     - field.field.node.code_section.field_code_chapter
+    - field.field.node.code_section.field_documents
     - field.field.node.code_section.field_legacy_path
     - field.field.node.code_section.field_numeric_order
     - field.field.node.code_section.field_prefix_note
     - field.field.node.code_section.field_reviewer
     - field.field.node.code_section.field_section_body
-    - field.field.node.code_section.field_suffix_note
     - node.type.code_section
   module:
     - chosen_field
     - content_moderation
+    - entity_browser
     - path
     - text
 id: node.code_section.default
@@ -33,6 +35,21 @@ content:
     third_party_settings: {  }
     type: chosen_select
     region: content
+  field_documents:
+    type: entity_browser_entity_reference
+    weight: 6
+    settings:
+      entity_browser: document_browser_embed
+      field_widget_display: rendered_entity
+      field_widget_edit: true
+      field_widget_remove: true
+      field_widget_replace: true
+      open: true
+      selection_mode: selection_append
+      field_widget_display_settings:
+        view_mode: embedded
+    region: content
+    third_party_settings: {  }
   field_legacy_path:
     weight: 7
     settings:
@@ -67,14 +84,6 @@ content:
     region: content
   field_section_body:
     weight: 5
-    settings:
-      rows: 5
-      placeholder: ''
-    third_party_settings: {  }
-    type: text_textarea
-    region: content
-  field_suffix_note:
-    weight: 6
     settings:
       rows: 5
       placeholder: ''
