--- a/web/sites/default/config/field.storage.node.field_documents.yml
+++ b/web/sites/default/config/field.storage.node.field_documents.yml
@@ -1,22 +1,23 @@
-uuid: fef13dc9-19d2-44d7-a3f1-1c55395796bc
+uuid: 426a288d-f9b8-40e5-9e5d-052486caf542
 langcode: en
 status: true
 dependencies:
   module:
     - field_permissions
+    - media
     - node
-    - text
 third_party_settings:
   field_permissions:
     permission_type: public
-id: node.field_suffix_note
-field_name: field_suffix_note
+id: node.field_documents
+field_name: field_documents
 entity_type: node
-type: text_long
-settings: {  }
-module: text
+type: entity_reference
+settings:
+  target_type: media
+module: core
 locked: false
-cardinality: 1
+cardinality: -1
 translatable: true
 indexes: {  }
 persist_with_no_fields: false
