--- a/web/sites/default/config/views.view.city_charter_sections.yml
+++ b/web/sites/default/config/views.view.city_charter_sections.yml
@@ -5,7 +5,6 @@ dependencies:
   config:
     - field.storage.node.field_prefix_note
     - field.storage.node.field_section_body
-    - field.storage.node.field_suffix_note
     - node.type.charter_section
   module:
     - node
@@ -440,68 +439,6 @@ display:
           separator: ', '
           field_api_classes: false
           plugin_id: field
-        field_suffix_note:
-          id: field_suffix_note
-          table: node__field_suffix_note
-          field: field_suffix_note
-          relationship: none
-          group_type: group
-          admin_label: ''
-          label: ''
-          exclude: false
-          alter:
-            alter_text: false
-            text: ''
-            make_link: false
-            path: ''
-            absolute: false
-            external: false
-            replace_spaces: false
-            path_case: none
-            trim_whitespace: false
-            alt: ''
-            rel: ''
-            link_class: ''
-            prefix: ''
-            suffix: ''
-            target: ''
-            nl2br: false
-            max_length: 0
-            word_boundary: true
-            ellipsis: true
-            more_link: false
-            more_link_text: ''
-            more_link_path: ''
-            strip_tags: false
-            trim: false
-            preserve_tags: ''
-            html: false
-          element_type: ''
-          element_class: ''
-          element_label_type: ''
-          element_label_class: ''
-          element_label_colon: false
-          element_wrapper_type: ''
-          element_wrapper_class: ''
-          element_default_classes: true
-          empty: ''
-          hide_empty: false
-          empty_zero: false
-          hide_alter_empty: true
-          click_sort_column: value
-          type: text_default
-          settings: {  }
-          group_column: value
-          group_columns: {  }
-          group_rows: true
-          delta_limit: 0
-          delta_offset: 0
-          delta_reversed: false
-          delta_first_last: false
-          multi_type: separator
-          separator: ', '
-          field_api_classes: false
-          plugin_id: field
     cache_metadata:
       max-age: -1
       contexts:
@@ -513,7 +450,6 @@ display:
       tags:
         - 'config:field.storage.node.field_prefix_note'
         - 'config:field.storage.node.field_section_body'
-        - 'config:field.storage.node.field_suffix_note'
         - extensions
   entity_reference_1:
     display_plugin: entity_reference
@@ -593,6 +529,8 @@ display:
           plugin_id: field
       defaults:
         fields: false
+        filters: false
+        filter_groups: false
       row:
         type: entity_reference
         options:
@@ -606,6 +544,52 @@ display:
         type: none
         options:
           offset: 0
+      filters:
+        type:
+          id: type
+          table: node_field_data
+          field: type
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: in
+          value:
+            charter_section: charter_section
+          group: 1
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+            reduce: false
+            argument: null
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          entity_type: node
+          entity_field: type
+          plugin_id: bundle
+      filter_groups:
+        operator: AND
+        groups:
+          1: AND
     cache_metadata:
       max-age: -1
       contexts:
