--- a/web/sites/default/config/core.entity_form_display.node.code_section.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.code_section.default.yml
@@ -44,10 +44,10 @@ content:
       field_widget_edit: true
       field_widget_remove: true
       field_widget_replace: true
-      open: true
       selection_mode: selection_append
       field_widget_display_settings:
         view_mode: embedded
+      open: false
     region: content
     third_party_settings: {  }
   field_legacy_path:
