--- a/web/sites/default/config/core.entity_view_display.node.code_section.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.code_section.default.yml
@@ -12,6 +12,7 @@ dependencies:
     - field.field.node.code_section.field_section_body
     - node.type.code_section
   module:
+    - ds
     - panelizer
     - text
     - user
@@ -30,9 +31,18 @@ content:
     weight: 2
     label: above
     settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
+      view_mode: embedded
+      link: false
+    third_party_settings:
+      ds:
+        ds_limit: ''
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
+    type: entity_reference_entity_view
     region: content
   field_prefix_note:
     weight: 0
