POWR-1012 Update user group and folder permissions

--- a/.lando.yml
+++ b/.lando.yml
@@ -26,6 +26,9 @@ services:
 
   node:
     type: node
+    run_as_root:
+      - /bin/sh -c "adduser www-data node"
+      - /bin/sh -c "chmod -R 775 /var/www"
     build:
       - echo "Installing Node.js dependencies..."
       - npm -C web/themes/custom/cloudy install
