--- a/web/sites/default/config/core.entity_view_display.node.code_section.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.code_section.teaser.yml
@@ -37,6 +37,7 @@ hidden:
   content_moderation_control: true
   field_code_chapter: true
   field_legacy_path: true
+  field_documents: true
   field_numeric_order: true
   field_reviewer: true
   field_section_body: true
