POWR-825 config conflict still persists

--- a/web/sites/default/config/core.entity_view_display.node.code_chapter.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.code_chapter.teaser.yml
@@ -27,6 +27,7 @@ content: {  }
 hidden:
   content_moderation_control: true
   field_code_title: true
+  field_documents: true
   field_legacy_path: true
   field_numeric_order: true
   field_prefix_note: true
